--- a/firstUseTwoViewController.xib
+++ b/firstUseTwoViewController.xib
@@ -20,9 +20,12 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yk9-u9-1mm" customClass="BEMSimpleLineGraphView">
-                    <rect key="frame" x="0.0" y="134" width="320" height="275"/>
+                    <rect key="frame" x="86" y="171" width="148" height="136"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="EEn-gT-Iaq"/>
+                    </connections>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
