--- a/firstUseOneViewController.xib
+++ b/firstUseOneViewController.xib
@@ -25,10 +25,17 @@
                     <color key="textColor" red="1" green="0.12217647641598584" blue="0.055965545983036158" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_alarm.png" translatesAutoresizingMaskIntoConstraints="NO" id="Abz-Mg-4qc">
-                    <rect key="frame" x="69" y="181" width="42" height="45"/>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3AG-nn-qzf">
+                    <rect key="frame" x="37" y="172" width="252" height="252"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_alarm.png" translatesAutoresizingMaskIntoConstraints="NO" id="Abz-Mg-4qc">
+                            <rect key="frame" x="20" y="20" width="42" height="45"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
