--- a/firstUseOneViewController.xib
+++ b/firstUseOneViewController.xib
@@ -7,6 +7,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="firstUseOneViewController">
             <connections>
                 <outlet property="label" destination="3EF-Mu-M6a" id="haS-lx-VxN"/>
+                <outlet property="panelView" destination="3AG-nn-qzf" id="BZc-CM-FIY"/>
+                <outlet property="ringImage" destination="Abz-Mg-4qc" id="zHw-S5-GBa"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,23 +17,23 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_bg2.png" translatesAutoresizingMaskIntoConstraints="NO" id="weq-Sw-dhB">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="3.png" translatesAutoresizingMaskIntoConstraints="NO" id="weq-Sw-dhB">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="35.3℃" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3EF-Mu-M6a">
-                    <rect key="frame" x="91" y="280" width="152" height="54"/>
+                    <rect key="frame" x="91" y="234" width="152" height="100"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="49"/>
                     <color key="textColor" red="1" green="0.12217647641598584" blue="0.055965545983036158" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3AG-nn-qzf">
-                    <rect key="frame" x="37" y="172" width="252" height="252"/>
+                    <rect key="frame" x="0.0" y="120" width="320" height="320"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_alarm.png" translatesAutoresizingMaskIntoConstraints="NO" id="Abz-Mg-4qc">
-                            <rect key="frame" x="20" y="20" width="42" height="45"/>
+                            <rect key="frame" x="30" y="198" width="42" height="45"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                     </subviews>
@@ -44,7 +46,7 @@
         </view>
     </objects>
     <resources>
+        <image name="3.png" width="640" height="1136"/>
         <image name="fu_alarm.png" width="63" height="67"/>
-        <image name="fu_bg2.png" width="640" height="1136"/>
     </resources>
 </document>
