--- a/firstUseThreeViewController.xib
+++ b/firstUseThreeViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="firstUseThreeViewController">
             <connections>
+                <outlet property="imageView" destination="UU1-7c-rZp" id="0Vg-zQ-JOI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,20 +15,26 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="bw9-84-7nd">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_4.png" translatesAutoresizingMaskIntoConstraints="NO" id="bw9-84-7nd">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUe-OV-ZGA">
-                    <rect key="frame" x="106" y="449" width="109" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUe-OV-ZGA">
+                    <rect key="frame" x="68" y="486" width="184" height="38"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button">
+                    <state key="normal" backgroundImage="fu_button.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <state key="selected" backgroundImage="fu_button_hl.png"/>
+                    <state key="highlighted" backgroundImage="fu_button_hl.png"/>
                     <connections>
                         <action selector="startButtonTouch:" destination="-1" eventType="touchUpInside" id="RVY-FA-65I"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fu_yezi.png" translatesAutoresizingMaskIntoConstraints="NO" id="UU1-7c-rZp">
+                    <rect key="frame" x="161" y="231" width="62" height="62"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
@@ -35,6 +42,9 @@
         </view>
     </objects>
     <resources>
-        <image name="fu_bg.png" width="640" height="1136"/>
+        <image name="fu_4.png" width="640" height="1136"/>
+        <image name="fu_button.png" width="354" height="77"/>
+        <image name="fu_button_hl.png" width="354" height="77"/>
+        <image name="fu_yezi.png" width="149" height="150"/>
     </resources>
 </document>
